# verve

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: en.txt
demo/: record.tape  typing.tape
src/: app.rs  confetti.rs  main.rs  score.rs  ui.rs  words.rs
