[package]
name = "verve"
version = "0.1.0"
edition = "2021"
description = "A minimalist typing speed test for the terminal"
license = "MIT"
repository = "https://github.com/vinicsperes/verve"
readme = "README.md"
keywords = ["typing", "tui", "wpm", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
dirs = "6.0.0"

[profile.release]
opt-level = 3
lto = true
strip = true
